--- a/index.html
+++ b/index.html
@@ -48,67 +48,91 @@
     <main>
       <section class="section-hero hero">
         <div class="container">
-          <h1 class="hero-taitle">
-            Find out talented <span class="accent">freelancer</span> with better
-            review faster.
-          </h1>
-          <p class="hero-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip.
-          </p>
-          <button class="button-taitle" type="button">Discover Now</button>
-          <button class="button-pley">
-            <img src="./images/buttom-pley.png" alt="pley" />
-            <span> Watch Demo</span>
-          </button>
-          <img src="./images/women.png" alt="girl with laptop" />
+          <div class="section-hero-teible">
+            <div class="section-hero-text">
+              <h1 class="hero-taitle">
+                Find out talented <span class="accent">freelancer</span> with
+                better review faster.
+              </h1>
+              <p class="hero-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip.
+              </p>
+              <div class="hero-button">
+                <button class="button-taitle" type="button">
+                  Discover Now
+                </button>
+                <button class="button-pley">
+                  <img src="./images/buttom-pley.png" alt="pley" />
+                  <span> Watch Demo</span>
+                </button>
+              </div>
+            </div>
+            <img src="./images/women.png" alt="girl with laptop" />
+          </div>
         </div>
       </section>
       <section class="section-awards">
         <div class="container">
           <h2 class="visually-hidden">awards</h2>
-          <img src="./images/de singn studio.png" alt="de singn studio" />
-          <img
-            src="./images/design and branding.png"
-            alt="design and branding"
-          />
-          <img src="./images/greenery.png" alt="greenery" />
-          <img src="./images/natural.png" alt="natural" />
-          <img src="./images/nature.png" alt="nature" />
-          <img src="./images/your company.png" alt="your company" />
+          <div class="awards-img">
+            <img src="./images/de singn studio.png" alt="de singn studio" />
+            <img
+              src="./images/design and branding.png"
+              alt="design and branding"
+            />
+            <img src="./images/greenery.png" alt="greenery" />
+            <img src="./images/natural.png" alt="natural" />
+            <img src="./images/nature.png" alt="nature" />
+            <img src="./images/your company.png" alt="your company" />
+          </div>
         </div>
       </section>
       <section class="section-us">
         <div class="container">
           <p class="smal-text">How it works</p>
-          <h2 class="search-section">
-            Start find a job you love with us easily
-          </h2>
-          <ul>
-            <li class="columns">
-              <div class="numer-one">1</div>
-              Complete Profile
-              <img src="./images/down arrow.png" alt="down arrow" />
-            </li>
-            <li class="columns">
-              <div class="numer-two">2</div>
-              Search Vacancies
-              <img src="./images/up arrow.png" alt="up arrow" />
-              <p class="columns-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation.
-              </p>
-            </li>
-            <li class="columns">
-              <div class="numer-three">3</div>
-              Apply Job
-              <img src="./images/down arrow.png" alt="down arrow" />
-            </li>
-          </ul>
-          <img src="./images/video_pley.png" alt="video" />
+          <div class="taible-video">
+            <div class="taible-video-text">
+              <h2 class="search-section">
+                Start find a job you love with us easily
+              </h2>
+              <ul>
+                <li class="columns">
+                  <div class="columns-table">
+                    <div class="numer-one">1</div>
+                    <div class="columns-text-accent text-one">
+                      Complete Profile
+                    </div>
+                    <img src="./images/down arrow.png" alt="down arrow" />
+                  </div>
+                </li>
+                <li class="columns">
+                  <div class="columns-table">
+                    <div class="numer-two">2</div>
+                    <div class="columns-text-accent text-two">
+                      Search Vacancies
+                    </div>
+                    <img src="./images/up arrow.png" alt="up arrow" />
+                  </div>
+                  <p class="columns-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
+                  </p>
+                </li>
+                <li class="columns">
+                  <div class="columns-table">
+                    <div class="numer-three">3</div>
+                    <div class="columns-text-accent text-three">Apply Job</div>
+                    <img src="./images/down arrow.png" alt="down arrow" />
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <img src="./images/video_pley.png" alt="video" />
+          </div>
         </div>
       </section>
       <section class="section-us">
