--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   </div>
                 </li>
                 <li class="columns">
-                  <div class="columns-table">
+                  <div class="columns-table text-two-t">
                     <div class="numer-two">2</div>
                     <div class="columns-text-accent text-two">
                       Search Vacancies
@@ -138,47 +138,53 @@
       <section class="section-us">
         <div class="container">
           <h2 class="taitle-us">Why Choose Us</h2>
-          <p class="text-us">
+          <p class="text-us text-us-accent text-us-accent-t">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
             ad minim veniam.
           </p>
-          <ul>
-            <li>
-              <img
-                class="compass-one"
-                src="./images/conpass.png"
-                alt="compass"
-              />
-              <div class="Trusted">Trusted</div>
-              <p class="text-t">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna.
-              </p>
+          <ul class="columns-us">
+            <li class="columns-us-table">
+              <div class="columns-compas">
+                <img
+                  class="compass-one"
+                  src="./images/conpass.png"
+                  alt="compass"
+                />
+                <div class="Trusted">Trusted</div>
+                <p class="text-t">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna.
+                </p>
+              </div>
             </li>
-            <li>
-              <img
-                class="compass-two"
-                src="./images/conpass.png"
-                alt="compass"
-              />
-              <div class="Easy-to-Use">Easy to Use</div>
-              <p class="text-e">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna.
-              </p>
+            <li class="columns-us-table">
+              <div class="columns-compas">
+                <img
+                  class="compass-two"
+                  src="./images/conpass.png"
+                  alt="compass"
+                />
+                <div class="Easy-to-Use">Easy to Use</div>
+                <p class="text-e">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna.
+                </p>
+              </div>
             </li>
-            <li>
-              <img
-                class="compss-three"
-                src="./images/conpass.png"
-                alt="compass"
-              />
-              <div class="Faster">Faster</div>
-              <p class="text-f">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna.
-              </p>
+            <li class="columns-us-table">
+              <div class="columns-compas">
+                <img
+                  class="compss-three"
+                  src="./images/conpass.png"
+                  alt="compass"
+                />
+                <div class="Faster">Faster</div>
+                <p class="text-f">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna.
+                </p>
+              </div>
             </li>
           </ul>
         </div>
@@ -186,64 +192,86 @@
       <section class="section-us">
         <div class="container">
           <h2 class="title-jobs">Featured Jobs</h2>
-          <p class="text-job">
+          <p class="text-job text-job-centr">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
             ad minim veniam.
           </p>
-          <img src="./images/left arrow.png" alt="left arrow" />
-          <img src="./images/right arrow.png" alt="right arrow" />
-          <ul>
+          <ul class="card-flex">
             <li class="card">
-              <img src="./images/boy.png" alt="boy" />
+              <img class="card-boy-one" src="./images/boy.png" alt="boy" />
               <h3 class="card-h3">Database Programmer</h3>
               <div>
                 <p class="subtitle">Marraz Team</p>
-                <p>
+                <p class="money-card">
+                  <img src="./images/money.png" alt="money" />
                   &dollar;14,000 - &dollar;25,000
                   <span class="jobs_card_accent">/monthly</span>
                 </p>
-                <p>London,Enlend View map</p>
-                <img src="./images/Group 54.png" alt="heart" />
-                <button class="button_people_one" type="button">
-                  Apply Now
-                </button>
+                <p class="gps-card">
+                  <img src="./images/gps.png" alt="gps-icon" />London,Enlend
+                  View map
+                </p>
+                <div class="heard-button">
+                  <img src="./images/Group 54.png" alt="heart" />
+                  <button class="button_people_one" type="button">
+                    Apply Now
+                  </button>
+                </div>
               </div>
             </li>
             <li class="card">
-              <img src="./images/guy with glasses.png" alt="boy on glasses" />
+              <img
+                class="card-boy-one"
+                src="./images/guy with glasses.png"
+                alt="boy on glasses"
+              />
               <h3 class="card-h3">Database Programmer</h3>
               <div>
                 <p class="subtitle">Marraz Team</p>
-                <p>
+                <p class="money-card">
+                  <img src="./images/money.png" alt="money" />
                   &dollar;14,000 - &dollar;25,000
                   <span class="jobs_card_accent">/monthly</span>
                 </p>
-                <p>London,Enlend View map</p>
-                <img src="./images/Group 54 (1).png" alt="heart" />
-                <button class="button_people_two" type="button">
-                  Apply Now
-                </button>
+                <p class="gps-card">
+                  <img src="./images/gps.png" alt="gps-icon" /> London,Enlend
+                  View map
+                </p>
+                <div class="heard-button">
+                  <img src="./images/Group 54 (1).png" alt="heart" />
+                  <button class="button_people_two" type="button">
+                    Apply Now
+                  </button>
+                </div>
               </div>
             </li>
             <li class="card">
-              <img src="./images/boy.png" alt="boy" />
+              <img class="card-boy-one" src="./images/boy.png" alt="boy" />
               <h3 class="card-h3">Database Programmer</h3>
               <div>
                 <p class="subtitle">Marraz Team</p>
-                <p>
+                <p class="money-card">
+                  <img src="./images/money.png" alt="money" />
                   &dollar;14,000 - &dollar;25,000
                   <span class="jobs_card_accent">/monthly</span>
                 </p>
-                <p>London,Enlend View map</p>
-                <img src="./images/Group 54 (1).png" alt="heart" />
-                <button class="button_people_one" type="button">
-                  Apply Now
-                </button>
+                <p class="gps-card">
+                  <img src="./images/gps.png" alt="gps-icon" />London,Enlend
+                  View map
+                </p>
+                <div class="heard-button">
+                  <img src="./images/Group 54 (1).png" alt="heart" />
+                  <button class="button_people_one" type="button">
+                    Apply Now
+                  </button>
+                </div>
               </div>
             </li>
           </ul>
-          <button class="button_main_Jobs" type="button">View More</button>
+          <div class="button-main-flex">
+            <button class="button_main_Jobs" type="button">View More</button>
+          </div>
         </div>
       </section>
       <section class="section-us">
