--- a/index.html
+++ b/index.html
@@ -277,30 +277,38 @@
       <section class="section-us">
         <div class="container">
           <h2 class="reviews">What Our Customer Says</h2>
-          <p class="reviews_text">
+          <p class="reviews_text reviews-b">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
             ad minim veniam.
           </p>
-          <img
-            src="./images/guy in a hat and glasses.png"
-            alt="guy with glasses"
-          />
-          <h3 class="subtitle_reviews">William Smith</h3>
-          <p class="subtitle_reviews_text_one">CEO OF THE LOVE STUDENTS</p>
-          <img src="./images/star.png" alt="star" />
-          <p class="subtitle_reviews_text_two">
-            “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut
-            aliquip.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-            do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-            enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi
-            ut aliquip.”
-          </p>
-          <img src="./images/left arrow.png" alt="left arrow" />
-          <img src="./images/right arrow.png" alt="right arrow" />
-          <img src="./images/icons.png" alt="icons" />
+          <div class="kolumn-us">
+            <img
+              src="./images/guy in a hat and glasses.png"
+              alt="guy with glasses"
+            />
+            <div class="kolumn-us-text">
+              <h3 class="subtitle_reviews subtitle_reviews-b">William Smith</h3>
+              <p class="subtitle_reviews_text_one">CEO OF THE LOVE STUDENTS</p>
+              <img class="star-img" src="./images/star.png" alt="star" />
+              <p class="subtitle_reviews_text_two">
+                “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam,quis nostrud exercitation ullamco laboris
+                nisi ut aliquip.Lorem ipsum dolor sit amet, consectetur
+                adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam,quis nostrud
+                exercitation ullamco laboris nisi ut aliquip.”
+              </p>
+              <div class="img-us">
+                <div class="arows">
+                  <img src="./images/left arrow.png" alt="left arrow" />
+                  <img src="./images/right arrow.png" alt="right arrow" />
+                </div>
+                <img src="./images/icons.png" alt="icons" />
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <section class="section-us">
