--- a/index.html
+++ b/index.html
@@ -24,24 +24,26 @@
             <li><a class="link" chref="#">becom a member</a></li>
             <li><a class="link" chref="#">about us</a></li>
           </ul>
-          <div class="search-box">
-            <input
-              class="search-text-form"
-              type="text"
-              placeholder="Search here...."
-            />
-            <button class="search-from-butm">
-              <img
-                class="search-from-img"
-                src="./images/dandruff.png"
-                alt="dandruff"
+          <div class="header-box">
+            <div class="search-box">
+              <input
+                class="search-text-form"
+                type="text"
+                placeholder="Search here...."
               />
-            </button>
+              <button class="search-from-butm">
+                <img
+                  class="search-from-img"
+                  src="./images/dandruff.png"
+                  alt="dandruff"
+                />
+              </button>
+            </div>
+            <ul class="header-font-register">
+              <li><a class="link" chref="#">login</a></li>
+              <li><a class="link" chref="#">/Sing Up</a></li>
+            </ul>
           </div>
-          <ul class="header-font-register">
-            <li><a class="link" chref="#">login</a></li>
-            <li><a class="link" chref="#">/Sing Up</a></li>
-          </ul>
         </nav>
       </div>
     </header>
@@ -290,7 +292,9 @@
             <div class="kolumn-us-text">
               <h3 class="subtitle_reviews subtitle_reviews-b">William Smith</h3>
               <p class="subtitle_reviews_text_one">CEO OF THE LOVE STUDENTS</p>
-              <img class="star-img" src="./images/star.png" alt="star" />
+              <div class="star-img">
+                <img src="./images/star.png" alt="star" />
+              </div>
               <p class="subtitle_reviews_text_two">
                 “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -336,98 +340,179 @@
       <section class="section-us">
         <div class="container">
           <h2 class="price">Pricing Plan</h2>
-          <p class="price_text">
+          <p class="price_text price-text-b">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
             ad minim veniam.
           </p>
-          <ul>
+          <ul class="price-blok-flex">
             <li class="price_card">
-              <h3 class="subtitle_price">FREE</h3>
-              <div class="subtitle_price_text">
-                <p class="price_number">0</p>
-                <p class="price_text_vercion">Per month</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Sed do eiusmod tempor</p>
-                <button class="button_free" type="button">Purchase Now</button>
+              <div class="blok-price">
+                <h3 class="subtitle_price">FREE</h3>
+                <div class="subtitle_price_text">
+                  <p class="price_number">&#36;0</p>
+                  <p class="price_text_vercion">Per month</p>
+                  <div class="blok-text">
+                    <div class="prise-text-t">
+                      <p>
+                        <img src="./images/marker.png" alt="marker" />Lorem
+                        ipsum dolor sit amet.
+                      </p>
+                      <p>
+                        <img src="./images/marker.png" alt="marker" />Lorem
+                        ipsum dolor sit amet.
+                      </p>
+                      <p>
+                        <img src="./images/marker.png" alt="marker" />Sed do
+                        eiusmod tempor
+                      </p>
+                    </div>
+                  </div>
+                  <div class="buttom-price">
+                    <button class="button_free" type="button">
+                      Purchase Now
+                    </button>
+                  </div>
+                </div>
               </div>
             </li>
             <li class="price_card">
-              <h3 class="subtitle_price">PREMIUM</h3>
-              <div class="subtitle_price_text">
-                <p class="price_number">175</p>
-                <p class="price_text_vercion">Per month</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Ut enim ad minim veniam.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <button class="button_premium" type="button">
-                  Purchase Now
-                </button>
+              <div class="blok-price">
+                <h3 class="subtitle_price">PREMIUM</h3>
+                <div class="subtitle_price_text">
+                  <p class="price_number">&#36;175</p>
+                  <p class="price_text_vercion">Per month</p>
+                  <div class="blok-text">
+                    <div class="prise-text-t">
+                      <p>
+                        <img src="./images/marker.png" alt="marker" />Lorem
+                        ipsum dolor sit amet.
+                      </p>
+                      <p>
+                        <img src="./images/marker.png" alt="marker" />Ut enim ad
+                        minim veniam.
+                      </p>
+                      <p>
+                        <img src="./images/marker.png" alt="marker" />Lorem
+                        ipsum dolor sit amet.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="buttom-price">
+                    <button class="button_premium" type="button">
+                      Purchase Now
+                    </button>
+                  </div>
+                </div>
               </div>
             </li>
             <li class="price_card">
-              <h3 class="subtitle_price">PLATNIUM</h3>
-              <div class="subtitle_price_text">
-                <p class="price_number">500</p>
-                <p class="price_text_vercion">Per month</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Ut enim ad minim veniam.</p>
-                <p>Sed do eiusmod tempor</p>
-                <button class="button_platnium" type="button">
-                  Purchase Now
-                </button>
+              <div class="blok-price">
+                <h3 class="subtitle_price">PLATNIUM</h3>
+                <div class="subtitle_price_text">
+                  <p class="price_number">&#36;500</p>
+                  <p class="price_text_vercion">Per month</p>
+                  <div class="blok-text">
+                    <div class="prise-text-t">
+                      <p>
+                        <img src="./images/marker.png" alt="marker" />Lorem
+                        ipsum dolor sit amet.
+                      </p>
+                      <p>
+                        <img src="./images/marker.png" alt="marker" />Ut enim ad
+                        minim veniam.
+                      </p>
+                      <p>
+                        <img src="./images/marker.png" alt="marker" />Sed do
+                        eiusmod tempor
+                      </p>
+                    </div>
+                  </div>
+                  <div class="buttom-price">
+                    <button class="button_platnium" type="button">
+                      Purchase Now
+                    </button>
+                  </div>
+                </div>
               </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
-    <footer class="title_foote">
+    <footer class="title_footer">
       <div class="container">
-        <h3 class="subtitle_footer">Olearn</h3>
-        <ul class="footer_text">
-          <li>About</li>
-          <li>What we offer</li>
-          <li>Leadership</li>
-          <li>Careers</li>
-        </ul>
-        <h3 class="subtitle_footer">Courses</h3>
-        <ul class="footer_text">
-          <li>Classroom Courses</li>
-          <li>Virtual Courses</li>
-          <li>E-Learning Courses</li>
-          <li>Off Line Courses</li>
-        </ul>
-        <h3 class="subtitle_footer">Community</h3>
-        <ul class="footer_text">
-          <li>Learner</li>
-          <li>Partners</li>
-          <li>Developers</li>
-          <li>Teaching Centre</li>
-        </ul>
-        <h3 class="subtitle_footer">Quick Links</h3>
-        <ul class="footer_text">
-          <li>Home</li>
-          <li>Professional Edu</li>
-          <li>Courses</li>
-          <li>Admissions</li>
-        </ul>
-        <h3 class="subtitle_footer">More</h3>
-        <ul class="footer_text">
-          <li>Press</li>
-          <li>Inventors</li>
-          <li>Helps</li>
-          <li>Terms</li>
-        </ul>
-        <img src="./images/Logo.png" alt="Logo" />
-        <ul class="footer_link">
-          <li><a href="#">Terms of Use</a></li>
-          <li><a href="#">Protfolio</a></li>
-          <li><a href="#">Privacy policy</a></li>
-          <li><a href="#">Contact us</a></li>
-          <li><a href="#">FAQ</a></li>
-        </ul>
+        <div class="footer-flex">
+          <div class="taible-footer">
+            <h3 class="subtitle_footer">Olearn</h3>
+            <ul class="footer_text">
+              <li>About</li>
+              <li>What we offer</li>
+              <li>Leadership</li>
+              <li>Careers</li>
+            </ul>
+          </div>
+          <div class="taible-footer">
+            <h3 class="subtitle_footer">Courses</h3>
+            <ul class="footer_text">
+              <li>Classroom Courses</li>
+              <li>Virtual Courses</li>
+              <li>E-Learning Courses</li>
+              <li>Off Line Courses</li>
+            </ul>
+          </div>
+          <div class="taible-footer">
+            <h3 class="subtitle_footer">Community</h3>
+            <ul class="footer_text">
+              <li>Learner</li>
+              <li>Partners</li>
+              <li>Developers</li>
+              <li>Teaching Centre</li>
+            </ul>
+          </div>
+          <div class="taible-footer">
+            <h3 class="subtitle_footer">Quick Links</h3>
+            <ul class="footer_text">
+              <li>Home</li>
+              <li>Professional Edu</li>
+              <li>Courses</li>
+              <li>Admissions</li>
+            </ul>
+          </div>
+          <div class="taible-footer">
+            <h3 class="subtitle_footer">More</h3>
+            <ul class="footer_text">
+              <li>Press</li>
+              <li>Inventors</li>
+              <li>Helps</li>
+              <li>Terms</li>
+            </ul>
+          </div>
+        </div>
+        <div class="taible-link">
+          <img src="./images/logo-footer.png" alt="Logo" />
+          <ul class="footer_link">
+            <li><a href="#">Terms of Use</a></li>
+            <li><a href="#">Protfolio</a></li>
+            <li><a href="#">Privacy policy</a></li>
+            <li><a href="#">Contact us</a></li>
+            <li><a href="#">FAQ</a></li>
+          </ul>
+          <div class="footer-buttom">
+            <button class="buttom-link">
+              <img src="./images/facebook.png" alt="facebook" />
+            </button>
+            <button class="buttom-link">
+              <img src="./images/instagram.png" alt="instagram" />
+            </button>
+            <button class="buttom-link">
+              <img src="./images/twiter.png" alt="twiter" />
+            </button>
+            <button class="buttom-link">
+              <img src="./images/youtube.png" alt="youtube" />
+            </button>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
