--- a/index.html
+++ b/index.html
@@ -355,16 +355,25 @@
                   <div class="blok-text">
                     <div class="prise-text-t">
                       <p>
-                        <img src="./images/marker.png" alt="marker" />Lorem
-                        ipsum dolor sit amet.
+                        <img
+                          class="marker-margen"
+                          src="./images/marker.png"
+                          alt="marker"
+                        />Lorem ipsum dolor sit amet.
                       </p>
                       <p>
-                        <img src="./images/marker.png" alt="marker" />Lorem
-                        ipsum dolor sit amet.
+                        <img
+                          class="marker-margen"
+                          src="./images/marker.png"
+                          alt="marker"
+                        />Lorem ipsum dolor sit amet.
                       </p>
                       <p>
-                        <img src="./images/marker.png" alt="marker" />Sed do
-                        eiusmod tempor
+                        <img
+                          class="marker-margen"
+                          src="./images/marker.png"
+                          alt="marker"
+                        />Sed do eiusmod tempor
                       </p>
                     </div>
                   </div>
@@ -385,16 +394,25 @@
                   <div class="blok-text">
                     <div class="prise-text-t">
                       <p>
-                        <img src="./images/marker.png" alt="marker" />Lorem
-                        ipsum dolor sit amet.
+                        <img
+                          class="marker-margen"
+                          src="./images/marker.png"
+                          alt="marker"
+                        />Lorem ipsum dolor sit amet.
                       </p>
                       <p>
-                        <img src="./images/marker.png" alt="marker" />Ut enim ad
-                        minim veniam.
+                        <img
+                          class="marker-margen"
+                          src="./images/marker.png"
+                          alt="marker"
+                        />Ut enim ad minim veniam.
                       </p>
                       <p>
-                        <img src="./images/marker.png" alt="marker" />Lorem
-                        ipsum dolor sit amet.
+                        <img
+                          class="marker-margen"
+                          src="./images/marker.png"
+                          alt="marker"
+                        />Lorem ipsum dolor sit amet.
                       </p>
                     </div>
                   </div>
@@ -415,16 +433,25 @@
                   <div class="blok-text">
                     <div class="prise-text-t">
                       <p>
-                        <img src="./images/marker.png" alt="marker" />Lorem
-                        ipsum dolor sit amet.
+                        <img
+                          class="marker-margen"
+                          src="./images/marker.png"
+                          alt="marker"
+                        />Lorem ipsum dolor sit amet.
                       </p>
                       <p>
-                        <img src="./images/marker.png" alt="marker" />Ut enim ad
-                        minim veniam.
+                        <img
+                          class="marker-margen"
+                          src="./images/marker.png"
+                          alt="marker"
+                        />Ut enim ad minim veniam.
                       </p>
                       <p>
-                        <img src="./images/marker.png" alt="marker" />Sed do
-                        eiusmod tempor
+                        <img
+                          class="marker-margen"
+                          src="./images/marker.png"
+                          alt="marker"
+                        />Sed do eiusmod tempor
                       </p>
                     </div>
                   </div>
@@ -489,6 +516,7 @@
             </ul>
           </div>
         </div>
+        <hr class="footer-line" />
         <div class="taible-link">
           <img src="./images/logo-footer.png" alt="Logo" />
           <ul class="footer_link">
