--- a/index.html
+++ b/index.html
@@ -72,7 +72,12 @@
                 </button>
               </div>
             </div>
-            <img src="./images/women.png" alt="girl with laptop" />
+
+            <img
+              class="girl_art"
+              src="./images/women.png"
+              alt="girl with laptop"
+            />
           </div>
         </div>
       </section>
@@ -133,7 +138,7 @@
                 </li>
               </ul>
             </div>
-            <img src="./images/video_pley.png" alt="video" />
+            <img class="video_art" src="./images/video_pley.png" alt="video" />
           </div>
         </div>
       </section>
