add media max wdth 780, 1010,1960

--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
           </p>
           <div class="kolumn-us">
             <img
+              class="body_glases_img"
               src="./images/guy in a hat and glasses.png"
               alt="guy with glasses"
             />
